Added more html for the other tests
I added more html files for the use of babylon.js test and for the WebGPU on babylon.js and Three.js

--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html lang = "sv">
+<html lang="sv">
     <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Test Three.js app!</title>
         <style>
             body {
@@ -10,7 +10,23 @@
             }
         </style>
     </head>
+
     <body>
-        <script src="/main.js" type="module"></script>
+        <!--<script src="/main.js" type="module"></script>-->
+        <h1>WebGL Vs WebGPU</h1>
+        <ul>
+            <li>
+                <a href="/WebGL-Three.html">WebGL with Three.js</a>
+            </li>
+            <li>
+                <a href="/WebGPU-Three.html">WebGPU with Three.js</a>
+            </li>
+            <li>
+                <a href="/WebGL-Babylon.html">WebGL with Babylon.js</a>
+            </li>
+            <li>
+                <a href="/WebGPU-Babylon.html">WebGPU with Babylon.js</a>
+            </li>
+        </ul>
     </body>
 </html>
