WebGPU is working
Made it so the WebGPU API is working with three.js.

--- a/WebGL-Three.html
+++ b/WebGL-Three.html
@@ -11,6 +11,6 @@
         </style>
     </head>
     <body>
-        <script src="/main.js" type="module"></script>
+        <script src="/Three-WebGL.js" type="module"></script>
     </body>
 </html>
