--- a/WebGPU-Three.html
+++ b/WebGPU-Three.html
@@ -11,6 +11,6 @@
         </style>
     </head>
     <body>
-        <script src="/main.js" type="module"></script>
+        <script src="/Three-WebGPU.js" type="module"></script>
     </body>
 </html>
