--- a/WebGPU-Three.html
+++ b/WebGPU-Three.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Test Three.js app!</title>
+        <title>Three.js using WebGPU</title>
         <style>
             body {
                 margin: 0;
